Migrate to Vue 3! round #4: with Claude!!  - firebase assertion error.

--- a/vue3/src/assets/styles.css
+++ b/vue3/src/assets/styles.css
@@ -4,7 +4,7 @@ main > .container{position: absolute; top: 0%; bottom: 0; right: 0; left: 0; ove
 h1, h2, h3, h4, h5, h6{margin: 3rem 0; text-align: center;} h5{font-weight: 100; font-size: 4.65rem;}
 p{margin: 0;}small{font-size: 3rem;}
 input[type=text], input[type=password]{background: transparent; width: 100%; font-size: 4rem; font-family: Oxanium, Almarai; color: #c6ff00; border: 0;}
-button{line-height: 1; font-family: Oxanium, Almarai; background: transparent; cursor: pointer; border: 0; color: #c6ff00; font-size: 7rem; z-index: 101; position: relative; /* line-height: 2rem; */vertical-align: middle; padding: 0;} button[disabled]{opacity: .4}
+button{line-height: 1; font-family: Oxanium, Almarai; background: transparent; cursor: pointer; border: 0; color: #c6ff00; font-size: 7rem; z-index: 101; position: relative; /* line-height: 2rem; */vertical-align: middle; padding: 2rem;} button[disabled]{opacity: .4}
 select{font-size: 5rem; background: transparent; color: #c6ff00; text-align: center; padding: 1rem; border: 1px solid #c6ff00; border-radius: 1rem;}
 i{line-height: unset;} button span{font-size: 5rem;} /* MY BOOTSTRAP */.d-none{display: none !important;} .d-flex{display: -webkit-flexbox; display: -webkit-flex; display: flex;} .flex-col{flex-flow: column;} .justify-content-between{-webkit-justify-content: space-between; justify-content: space-between;}  .justify-content-around{-webkit-justify-content: space-around; justify-content: space-around;} .justify-content-center{-webkit-justify-content: center; justify-content: center;}.align-items-center{align-items: center;} .m-0{margin: 0 !important;} .m-1{margin: 1rem !important}.mb-1{margin-bottom: 1rem !important;} .m-2{margin: 2rem !important;} .m-3{margin: 3rem !important;} .m-auto{margin: auto !important;} .mb-0{margin-bottom: 0 !important;} .mt-0{margin-top: 0 !important;} .mr-0{margin-right: 0 !important;} .ml-0{margin-left: 0 !important;} .mb-1{margin-bottom: 1rem !important;} .mt-1{margin-top: 1rem !important;} .mr-1{margin-right: 1rem !important;} .ml-1{margin-left: 1rem !important;} .mb-2{margin-bottom: 2rem !important;} .mt-2{margin-top: 2rem !important;} .mr-2{margin-right: 2rem !important;} .ml-2{margin-left: 2rem !important;} .mb-3{margin-bottom: 3rem !important;} .mt-3{margin-top: 3rem !important;} .mr-3{margin-right: 3rem !important;} .ml-3{margin-left: 3rem !important;} .ml-auto{margin-left: auto} .my-0{margin-bottom: 0 !important; margin-top: 0 !important;} .my-1{margin-bottom: 1rem !important; margin-top: 1rem !important;} .my-2{margin-bottom: 2rem !important; margin-top: 2rem !important;} .my-3{margin-bottom: 3rem !important; margin-top: 3rem !important;} .mx-0{margin-right: 0 !important; margin-left: 0 !important;} .mx-1{margin-right: 1rem !important; margin-left: 1rem !important;} .mx-2{margin-right: 2rem !important; margin-left: 2rem !important;} .mx-3{margin-right: 3rem !important; margin-left: 3rem !important;} .p-0{padding: 0 !important;} .p-1{padding: 1rem !important;} .p-2{padding: 2rem !important;} .p-3{padding: 3rem !important;} .pb-0{padding-bottom: 0 !important;} .pt-0{padding-top: 0 !important;} .pr-0{padding-right: 0 !important;} .pl-0{padding-left: 0 !important;} .pb-1{padding-bottom: 1rem !important;} .pt-1{padding-top: 1rem !important;} .pr-1{padding-right: 1rem !important;} .pl-1{padding-left: 1rem !important;} .pb-2{padding-bottom: 2rem !important;} .pt-2{padding-top: 2rem !important;} .pr-2{padding-right: 2rem !important;} .pl-2{padding-left: 2rem !important;} .pb-3{padding-bottom: 3rem !important;} .pt-3{padding-top: 3rem !important;} .pr-3{padding-right: 3rem !important;} .pl-3{padding-left: 3rem !important;} .py-0{padding-bottom: 0 !important; padding-top: 0 !important;} .py-1{padding-bottom: 1rem !important; padding-top: 1rem !important;} .py-2{padding-bottom: 2rem !important; padding-top: 2rem !important;} .py-3{padding-bottom: 3rem !important; padding-top: 3rem !important;} .px-0{padding-right: 0 !important; padding-left: 0 !important;} .px-1{padding-right: 1rem !important; padding-left: 1rem !important;} .px-2{padding-right: 2rem !important; padding-left: 2rem !important;} .px-3{padding-right: 3rem !important; padding-left: 3rem !important;} .col-12{width: 100% !important;} .col-10{width: 83.3% !important;} .col-8{width: 66.6% !important;} .col-6{width: 50% !important;} .col-4{width: 33.3% !important;} .col-3{width: 25% !important;}
 /*********** CUSTOM ***********/
@@ -23,9 +23,16 @@ i{line-height: unset;} button span{font-size: 5rem;} /* MY BOOTSTRAP */.d-none{d
 .trans-left{-webkit-transition-property: left; -moz-transition-property: left; -o-transition-property: left; transition-property: left; }
 .trans-right{-webkit-transition-property: right; -moz-transition-property: right; -o-transition-property: right; transition-property: right; }
 /**********************************/
+#loading-panel{position: fixed; top: 0; left: 0; right: 0; bottom: 0; background: #c6ff00; z-index: 300; display: flex; flex-direction: column; justify-content: center; align-items: center; text-align: center;}
+#loading-panel .title{font-size: 8rem; color: #2f2f2f; font-weight: bold;}
+#loading-panel .loading{animation: spin 2s linear infinite;}
+@keyframes spin {
+  from { transform: rotate(0deg); }
+  to { transform: rotate(360deg); }
+}
 #please-login{z-index: -100; position: relative;}
 #please-login .loading{text-align: center; width: 100%;}
-#clicker{position: fixed; width: 100%; height: 100vh; border: 0px solid green; z-index: 100; top: 0; right: 0; cursor: copy;}
+#clicker{position: fixed; width: 100%; height: 100vh; border: 0px solid green; z-index: 99; top: 0; right: 0; cursor: copy;}
 #counter{position: absolute; top: 3rem; right: 8rem; left: 8rem; font-size: 9rem; color: #c6ff00; margin: 0 auto; line-height: 7rem; text-align: center;}
 .main{position: absolute; top: 2rem; bottom: 8rem; right: 2rem; left: 2rem;}
 .main .info{position: absolute; text-align: center; color: #777; bottom: 5%; left: 6rem; right: 0rem;}
@@ -45,11 +52,13 @@ i{line-height: unset;} button span{font-size: 5rem;} /* MY BOOTSTRAP */.d-none{d
 footer{color: #777; font-size: 3rem; text-align: center; position: absolute; right: 2rem; left: 2rem; bottom: 0; height: 5rem; line-height: 5rem; vertical-align: middle;}
 footer #percent{color: #2f2f2f; font-size: 3rem; position: absolute; bottom: 0; left: 0; text-align: center;}
 
-button#reset{position: absolute; top: 0; left: 0;}
+button#reset{position: absolute; top: 0; left: 0; z-index: 101;}
+button#showPanel{position: absolute; top: 0; right: 0; z-index: 101;}
 .position-right{position: absolute; top: 0; right: 0;}
 
-#panel{width: 100%; padding: 0; background: #2f2f2f; z-index: -9999; position: absolute; top: 0; bottom: 0; right: -300%; font-size: 4rem; font-family: Oxanium, Almarai; color: #c6ff00; overflow-x: hidden;}
-#panel.show{right: 0; z-index: 102;}
+#panel{width: 100%; padding: 0; background: #2f2f2f; z-index: -9999; position: fixed; top: 0; bottom: 0; right: -300%; font-size: 4rem; font-family: Oxanium, Almarai; color: #c6ff00; overflow-x: hidden; overflow-y: auto;}
+#panel.show{right: 0; z-index: 200;}
+#panel #closePanel{z-index: 201; position: absolute; top: 0; right: 0;}
 #panel #showSettings{position: absolute; top: 0; left: 0; padding: 2rem;}
 #panel #hideSettings{position: relative;}
 #panel .panel-heading{text-align: center; font-size: 6rem;}
@@ -63,7 +72,7 @@ button#reset{position: absolute; top: 0; left: 0;}
 #panel .records .record{position: relative; border-bottom: .25rem solid #949393; opacity: 0.5;}
 #panel .record button{color: #638000;}
 #panel .record.color-primary button{color: #c6ff00;}
-#panel .record button.details{top: 0rem; font-size: 5rem;}
+#panel .record button.details{position: absolute; top: 0rem; right: 0; font-size: 5rem; z-index: 10;}
 #panel .record button.details .close{display: none;}
 #panel .record p{color: #fff; line-height: 4rem;}
 
@@ -157,16 +166,18 @@ button#reset{position: absolute; top: 0; left: 0;}
 }
 
 /* STARTUP ANIMATION EFFECT */
-button#showPanel, button#reset, #counter{top: -200%;}
-#progress{left: -200%;}
-#recordTitle, #total{right: -300%;}
-.info{opacity: 0;}
-footer{bottom: -100%;}
+/* Disabled initial off-screen positioning for Vue version */
+/* button#showPanel, button#reset, #counter{top: -200%;} */
+/* #progress{left: -200%;} */
+/* #recordTitle, #total{right: -300%;} */
+/* .info{opacity: 0;} */
+/* footer{bottom: -100%;} */
 
-.animated{background: #2f2f2f;}
-.animated #please-login{display: none;}
+.container{background: #c6ff00;} /* Start with yellow background */
+.animated{background: #2f2f2f;} /* Change to dark when ready */
+.animated #loading-panel{display: none !important;}
 .animated button#showPanel{top: 0; transition: all .3s ease 0s;}
-.animated #counter{top: 0; transition: all .4s ease 0s;}
+.animated #counter{top: 3rem; transition: all .4s ease 0s;}
 .animated button#reset{top: 0; transition: all .5s ease 0s;}
 .animated #progress{left: 0; transition: width .6s ease .2s;}
 .animated #recordTitle{right: 0; transition: all .7s ease .2s;}
